==> sga2020gm-byte/stm_vario_v7/Src/epaper.c <==
#include "main.h"
#define SPI_QUEUE_SIZE 32

void epd_res_set()
{
	HAL_GPIO_WritePin(RST_GPIO_Port, RST_Pin, GPIO_PIN_SET);
}

void epd_res_reset()
{
	HAL_GPIO_WritePin(RST_GPIO_Port, RST_Pin, GPIO_PIN_RESET);
}

void epd_dc_set()
{
	HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin, GPIO_PIN_SET);
}

void epd_dc_reset()
{
	HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin, GPIO_PIN_RESET);
}

void epd_cs_set()
{
	HAL_GPIO_WritePin(SPI_CS_GPIO_Port, SPI_CS_Pin, GPIO_PIN_SET);
}

void epd_cs_reset()
{
	HAL_GPIO_WritePin(SPI_CS_GPIO_Port, SPI_CS_Pin, GPIO_PIN_RESET);
}

uint8_t epd_is_busy()
{
	return (HAL_GPIO_ReadPin(BUSY_GPIO_Port, BUSY_Pin) == RESET) ? 0 : 1;
}

void epd_write_reg(uint8_t reg)
{
    (void)epd_queue_push(SPI_TX_CMD, reg);
}

void epd_write_data(uint8_t data)
{
    (void)epd_queue_push(SPI_TX_DATA, data);
}

void _epd_write_data(uint8_t data)
{
    (void)epd_queue_push(SPI_TX_DATA, data);
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
	  for (uint32_t j = 0; j < length; j++)
	  {
	    _epd_write_data(Image1[j]);
	  }
}
