==> WeActStudio/WeActStudio.EpaperModule/Example/EpaperModuleTest_GD32F103/Epaper/epaper.c <==
#include "epaper.h"
#include "epdfont.h"
#include "systick.h"

void epd_res_set()
{
  gpio_bit_write(GPIOA, GPIO_PIN_8, SET);
}

void epd_res_reset()
{
  gpio_bit_write(GPIOA, GPIO_PIN_8, RESET);
}

void epd_dc_set()
{
  gpio_bit_write(GPIOB, GPIO_PIN_14, SET);
}

void epd_dc_reset()
{
  gpio_bit_write(GPIOB, GPIO_PIN_14, RESET);
}

void epd_cs_set()
{
  gpio_bit_write(GPIOB, GPIO_PIN_12, SET);
}

void epd_cs_reset()
{
  gpio_bit_write(GPIOB, GPIO_PIN_12, RESET);
}

uint8_t epd_is_busy()
{
  return gpio_input_bit_get(GPIOA, GPIO_PIN_15) == RESET ? 0 : 1;
}

void epd_write_reg(uint8_t reg)
{
  epd_dc_reset();
  epd_cs_reset();

  spi_i2s_data_transmit(SPI1, reg);
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TBE) == RESET)
    ;
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TRANS) != RESET)
    ;

  epd_cs_set();
  epd_dc_set();
}

void epd_write_data(uint8_t data)
{
  epd_cs_reset();

  spi_i2s_data_transmit(SPI1, data);
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TBE) == RESET)
    ;
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TRANS) != RESET)
    ;

  epd_cs_set();
}

void _epd_write_data(uint8_t data)
{
  while (spi_i2s_flag_get(SPI1, SPI_FLAG_TBE) == RESET)
    ;
  spi_i2s_data_transmit(SPI1, data);
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
  epd_cs_reset();
  for (uint32_t j = 0; j < length; j++)
  {
    _epd_write_data(Image1[j]);
  }
  _epd_write_data_over();
  epd_cs_set();
}
